[project]
name = "emqx-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server implementation that provides EMQX MQTT broker interaction."
keywords = ["emqx", "mqtt", "mcp", "llm"]
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Benniu Ji", email = "benniuji@gmail.com"}]
maintainers = [{ name = "Benniu Ji", email = "benniuji@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[project.urls]
Repository = "https://github.com/emqx/emqx-mcp-server"

[project.scripts]
emqx-mcp-server = "emqx_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]